--- a/opl/sonar-project.properties
+++ b/opl/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.sourceEncoding=UTF-8
 
 # List of the module identifiers
 #sonar.modules=oplcockpits,oplcore,oplfacades,oplinitialdata,oplstorefront
-sonar.modules=bin/custom/opl/oplcockpits,bin/custom/opl/oplcore,bin/custom/opl/oplfacades,bin/custom/opl/oplinitialdata,bin/custom/opl/oplstorefront
+sonar.modules=opl/oplcockpits,opl/oplcore,opl/oplfacades,opl/oplinitialdata,opl/oplstorefront
